--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -259,13 +259,13 @@ nav .more {
   padding: 50px;
 
   &--title {
-    font-size: 13vw;
+    font-size: 10vw;
     line-height: normal;
   }
   &--subtitle {
     color: $primary-color;
-    font-size: 2.2vw;
-    letter-spacing: 0.74em;
+    font-size: 1.75vw;
+    letter-spacing: 0.65em;
   }
 
   .container {
@@ -422,7 +422,7 @@ div.section-header {
   width: 100%;
   height: 100%;
 
-  padding: 30px 30px 0 50px;
+  padding: 60px 60px 0 50px;
 
   @include fontGothamBook(13px);
 
@@ -439,7 +439,7 @@ div.section-header {
 
   &__text {
     font-size: 15px;
-
+    max-width: 600px;
     padding-bottom: 15px;
   }
 }
